--- a/.github/workflows/PR-Demo-Comment-with-react.yml
+++ b/.github/workflows/PR-Demo-Comment-with-react.yml
@@ -177,12 +177,14 @@ jobs:
           token: ${{ steps.setup-bot.outputs.token }}
 
       - name: Set up JDK
+        run: echo "Setting up JDK"
         # uses: actions/setup-java@c5195efecf7bdfc987ee8bae7a71cb8b11521c00 # v4.7.1
         # with:
         #   java-version: "17"
         #   distribution: "temurin"
 
       - name: Run Gradle Command
+        run: echo "Running Gradle build"
         # run: |
         #   if [ "${{ needs.check-comment.outputs.disable_security }}" == "true" ]; then
         #     export DISABLE_ADDITIONAL_FEATURES=true
@@ -194,21 +196,25 @@ jobs:
         #   STIRLING_PDF_DESKTOP_UI: false
 
       - name: Set up Docker Buildx
+        run: echo "Setting up Docker Buildx"
         # uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435 # v3.11.1
 
       - name: Get version number
+        run: echo "Extracting version number"
         # id: versionNumber
         # run: |
         #   VERSION=$(grep "^version =" build.gradle | awk -F'"' '{print $2}')
         #   echo "versionNumber=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Login to Docker Hub
+        run: echo "Logging in to Docker Hub"
         # uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3.4.0
         # with:
         #   username: ${{ secrets.DOCKER_HUB_USERNAME }}
         #   password: ${{ secrets.DOCKER_HUB_API }}
 
       - name: Build and push PR-specific image
+        run: echo "Building and pushing Docker image"
         # uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83 # v6.18.0
         # with:
         #   context: .
